# hello_cmake_vcpkg

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: main.cpp
src/include/: main.h
